<resources>
    <string name="app_name">K22411CASampleProject</string>
    <string name="title_login_username">User name:</string>
    <string name="title_login_username_hint">Enter your username</string>
    <string name="title_login_password">Password:</string>
    <string name="title_login_save_infor">Save login infor</string>
    <string name="title_login_button_login">Login</string>
    <string name="title_confirm_exit_title">Confirm Exit</string>
    <string name="title_confirm_exit_message">Are you sure you want to exit?</string>
    <string name="title_confirm_exit_ok">OK</string>
    <string name="title_confirm_exit_cancel">CANCEL</string>
    <string name="title_main_employee">Employee</string>
    <string name="title_main_customer">Customer</string>
    <string name="title_employee_healthcare">Healthcare</string>
    <string name="title_employee_salary">Salary</string>
    <string name="title_activity_employee_healthcare">Employee Health Care</string>
    <string name="title_height">Height:</string>
    <string name="title_weight">Weight:</string>
    <string name="title_calculate">Calculate</string>
    <string name="title_clear">Clear</string>
    <string name="title_close">Close</string>
    <string name="title_mainhealthcare">"Health care description: "</string>
    <string name="content_healthcare">1. What is BMI?\nBMI (Body Mass Index), also known as body mass index, body weight index, is a commonly used tool to measure body fat. The standard BMI is calculated based on height and weight, applicable to adult men and women.\nBody mass index is calculated according to the formula:\nBMI = W/ [(H)2]\nIn which:\nBMI unit commonly used is kg/m2\nW is weight (kg)\nH is height (m)\nA person with a normal BMI will fluctuate between 18.5 - 24.9, this number shows that you are at the ideal weight.\n2. What is the BMI index for overweight, obesity?\nWhen the body mass index is between 25 - 29.9, it means you are overweight.\nIn the case of a BMI of 30 or higher, it shows that you are obese. Accordingly, about one-third of women in the United States are obese.\nBMI in adults\nBMI in adults\n3. Factors that affect body weight\nSome factors that affect your weight include:\nExcess calories: The body needs to supplement enough calories to meet daily energy needs. However, excess calories will be stored as fat. Supplementing too many calories will lead to overweight and obesity.\nAdvanced age: Your weight will usually increase a little as you age.\nGenetic factors: Some cases have genetic disorders, leading to obesity.\nPregnancy: During pregnancy, pregnant women often gain weight. After giving birth, women often cannot lose weight back to the normal level as before pregnancy.\nIn addition to factors related to the body or pregnancy, you can actively control the amount of calories you take in every day to keep your BMI at a normal level.\n4. How does a high BMI affect your health?\nA high BMI can have a negative impact on your health and lead to many dangerous diseases. Many serious health problems are associated with being overweight or obese, including:\nCardiovascular disease\nDiabetes\nGallbladder disease\nRisk of certain cancers, such as endometrial cancer, breast cancer, colon cancer, and gallbladder cancer. Obesity can also increase your risk of ovarian cancer.\nSleep apnea\nJoint disease\nInfertility.\n5. How to get an ideal BMI?\nTo achieve an ideal BMI, you need to lose weight. Losing weight requires you to use more calories than you take in. You can do this by exercising regularly to burn off excess energy, combined with a healthy diet.\nIt is best to see a doctor to plan a balanced, reasonable and nutritious diet. If necessary, you can quickly reach a normal BMI with a strict diet, combined with regular exercise.\nExercise helps you regain your ideal weight\nExercise helps you regain your ideal weight\n6. How to lose weight safely without medication\n6.1. Reasonable diet\nYou should limit your intake of foods high in sugar and fat. To regain a balanced body, you can cut calories and reduce sugar by avoiding sugary drinks, such as soft drinks or sweet tea. These drinks contain a lot of sugar and are rich in energy, and are often consumed with meals, making the amount of calories provided to the body become too much.\nIn addition, you should adjust your eating habits by controlling your portion sizes, avoiding eating too much of one type of food, and dividing your meals into many small meals. This will limit the amount of energy you take in after each meal.\n6.2. Moderate exercise\nPeople who have successfully lost weight and maintained their ideal BMI have a habit of spending 60 - 90 minutes on moderate-intensity exercise most days of the week. You don\'t have to do all your exercises at once. For example, you can exercise for 20 - 30 minutes, divided into three times a day. It is important to maintain a regular exercise routine every day, every week, continuously for many months, so that you can see a clear weight loss effect.\nIn addition to weight loss, exercise also improves overall health and mood. Different exercises help increase your endurance, improve flexibility and muscle strength. Exercise also helps reduce symptoms of depression and stress in some people. Your risk of heart disease, colon cancer and diabetes is also significantly reduced if you maintain regular physical activity.</string>
    <string name="title_mainsalary">Salary description:</string>
    <string name="content_salarydescription">"A salaried employee is an individual who is hired to handle a particular job and is paid a fixed amount of money, regardless of the hours they work per week. \n\nThe standard working hours are 40 hours per week, which means a salaried employee receives the agreed-upon salary even if they work for fewer hours. Moreover, employers don’t offer overtime pay for salaried employees who work for more than standard hours. \n\nA salaried employee typically receives a paycheck bi-weekly or monthly. In addition, their payroll may include paid holidays, healthcare programs, and other benefits. "</string>
    <string name="title_main_category">Category</string>
    <string name="title_main_product">Product</string>

</resources>